# deadnews-template-python

./: .cliffignore  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .renovaterc.json  .taplo.toml  CHANGELOG.cocogitto.md  CHANGELOG.default.md  CHANGELOG.github-keepachangelog.md  CHANGELOG.github.md  CHANGELOG.md  CHANGELOG.minimal.md  CHANGELOG.scopesorted.md  Dockerfile  Dockerfile.pypy  Makefile  README.md  cliff.toml  docker-compose.yml  mkdocs.yml  openapi.json  pyproject.toml
.github/: requirements.pip
.github/workflows/: auto-merge.yml  code-quality.yml  codeql.yml  dependency-review.yml  deps-review.yml  docker-publish.yml  docker.yml  main.yml  publish-pypi.yml  python-app.yml  python-code-quality.yml  python-codeql.yml  python-run-tests.yml
docs/scripts/: gen_openapi.py  gen_ref_nav.py
src/deadnews_python_template/: __init__.py
src/deadnews_template_python/: __init__.py  __main__.py  _main.py  app.py
tests/: test_app.py  test_deadnews_python_template.py  test_deadnews_template_python.py  test_main.py
