[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "deadnews-template-python"
version = "0.0.0"
description = "Python Project Template"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeadNews/deadnews-template-python"
repository = "https://github.com/DeadNews/deadnews-template-python"
keywords = ["python", "template", "layout"]
classifiers = ["Operating System :: OS Independent"]

[tool.poetry.scripts]
deadnews-template-python = "deadnews_template_python.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
uvicorn = { version = "^0.24.0", extras = ["standard"] }

[tool.poetry.group.lint.dependencies]
mypy = "^1.7.0"
poethepoet = "^0.24.4"
pyright = "^1.1.336"
ruff = "^0.1.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks]
mypy = "mypy ."
pyright = "pyright ."
ruff = "ruff check ."
ruff-fmt = "ruff format ."
lint.sequence = ["ruff", "ruff-fmt", "mypy"]

[tool.poe.tasks.test]
cmd = "pytest --cov-report=xml"

[tool.pytest.ini_options]
addopts = "--verbose --cov=./src --cov-report=term"
testpaths = ["tests"]
markers = ["online"]

[tool.coverage.report]
exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_untyped_defs = true

[tool.ruff]
line-length = 99
target-version = "py311" # until poetry v2

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "E501",    # Line too long
  "EXE001",  # Shebang is present but file is not executable
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "ISC001",  # Checks for implicitly concatenated strings on a single line.
  "PLR0913", # Too many arguments to function call
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "D", "PLC1901", "PLR2004", "S"]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.pydocstyle]
convention = "google"
